k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-shop-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: shop.yourdomain.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-shop-backend-service
                port:
                  number: 8000
          - path: /uni
            pathType: Prefix
            backend:
              service:
                name: uni-frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-shop-frontend-service
                port:
                  number: 80
